# bitbake

./: .b4-config  .clang-format  .gitignore  AUTHORS  ChangeLog  Dockerfile  HEADER  LICENSE  MANIFEST  MANIFEST.in  README  README.md  TODO  bitbake-1.10.0.tar.gz.delta  bitbake-1.10.0.tar.gz.id  bitbake-1.10.1.tar.gz.delta  bitbake-1.10.1.tar.gz.id  bitbake-1.10.2.tar.gz.delta  bitbake-1.10.2.tar.gz.id  bitbake-1.8.19.tar.gz.delta  bitbake-1.8.19.tar.gz.id  cgitrc  ez_setup.py  setup.py  toaster-requirements.txt  vendor.txt
.devcontainer/: devcontainer.json
bitbake/: AUTHORS  ChangeLog  MANIFEST  setup.py
bitbake/conf/: bitbake.conf
bitbake/contrib/vim/: bitbake.vim
bitbake/lib/bb/: __init__.py  data.py  data_smart.py  event.py  fetch.py  manifest.py  shell.py
classes/: base.bbclass
conf/: bitbake.conf
contrib/: autobuilderlog.json  bbdev.sh  dump_cache.py
contrib/hashserv/: Dockerfile
contrib/pypi/: BUILD.md  package-bitbake-setup.py
contrib/vim/ftdetect/: bitbake.vim
contrib/vim/ftplugin/: bitbake.vim
contrib/vim/plugin/: newbb.vim
contrib/vim/syntax/: bb.vim  bitbake.vim
default-registry/configurations/: oe-nodistro-master.conf.json  oe-nodistro.conf.json  poky-master.conf.json  poky-whinlatter.conf.json
doc/: .gitignore  COMMANDS  DEVEL  DIRSnVARS  EVENTS  FAQ  Makefile  OVERVIEW  README  TODO  TRANSITION  bitbake.1  conf.py  ebuild.1.txt  ebuild.5.txt  index.rst  releases.rst  setversions.py
doc/bitbake-user-manual/: bitbake-user-manual-customization.xsl  bitbake-user-manual-environment-setup.rst  bitbake-user-manual-execution.rst  bitbake-user-manual-execution.xml  bitbake-user-manual-fetching.rst  bitbake-user-manual-fetching.xml  bitbake-user-manual-hello.rst  bitbake-user-manual-hello.xml  bitbake-user-manual-intro.rst  bitbake-user-manual-intro.xml  bitbake-user-manual-metadata.rst  bitbake-user-manual-metadata.xml  bitbake-user-manual-ref-variables.rst  bitbake-user-manual-ref-variables.xml  bitbake-user-manual-style.css  bitbake-user-manual.xml
doc/manual/: Makefile  usermanual.xml
doc/sphinx-static/: switchers.js  theme_overrides.css
doc/template/: component.title.xsl  division.title.xsl  titlepage.templates.xml
doc/user-manual/: user-manual-bitbakecommand.xml  user-manual-customization.xsl  user-manual-execution.xml  user-manual-fetching.xml  user-manual-hello.xml  user-manual-internals.xml  user-manual-intro.xml  user-manual-metadata.xml  user-manual-ref-variables.xml  user-manual-style.css  user-manual.xml
lib/: codegen.py  pyinotify.py
lib/bb/: COW.py  __init__.py  build.py  cache.py  cache_extra.py  checksum.py  codeparser.py  command.py  compat.py  cooker.py  cookerdata.py  daemonize.py  data.py  data_dict.py  data_smart.py  event.py  exceptions.py  fetch.py  main.py  make.py  manifest.py  methodpool.py  monitordisk.py  msg.py  namedtuple_with_abc.py  persist_data.py  process.py  progress.py  providers.py  remotedata.py  runqueue.py  shell.py  siggen.py  taskdata.py  tinfoil.py  utils.py  xmlrpcserver.py
lib/bb/asyncrpc/: __init__.py  client.py  connection.py  exceptions.py  serv.py
lib/bb/fetch/: __init__.py  bk.py  bzr.py  cvs.py  git.py  hg.py  local.py  osc.py  perforce.py  repo.py  ssh.py  svk.py  svn.py  wget.py
lib/bb/fetch2/: __init__.py  az.py  bzr.py  clearcase.py  codeartifact.py  crate.py  cvs.py  gclient.py  gcp.py  git.py  gitannex.py  gitsm.py  gomod.py  hg.py  local.py  npm.py  npmsw.py  osc.py  perforce.py  repo.py  s3.py  sftp.py  ssh.py  svk.py  svn.py  wget.py
lib/bb/parse/: BBHandler.py  ConfHandler.py  __init__.py  ast.py
lib/bb/pysh/: interp.py  pyshlex.py  pyshyacc.py  sherrors.py
lib/bb/server/: __init__.py  none.py  process.py  xmlrpc.py  xmlrpcclient.py  xmlrpcserver.py
lib/bb/tests/: codeparser.py  cooker.py  cow.py  data.py  event.py  fetch.py  parse.py  persist_data.py  runqueue.py  setup.py  siggen.py  test_codeparser.py  test_cow.py  test_data.py  test_utils.py  utils.py
lib/bb/ui/: __init__.py  buildinfohelper.py  depexp.py  depexplorer.py  goggle.py  hob.py  knotty.py  knotty2.py  ncurses.py  puccho.py  taskexp.py  (+3 more)
lib/bblayers/: action.py  common.py  layerindex.py  query.py
lib/bs4/: __init__.py  dammit.py  diagnose.py  element.py  testing.py
lib/hashserv/: __init__.py  client.py  server.py  sqlalchemy.py  sqlite.py  tests.py
lib/layerindexlib/: __init__.py  cooker.py  plugin.py  restapi.py
lib/ply/: __init__.py  lex.py  yacc.py
lib/progressbar/: compat.py  progressbar.py  widgets.py
lib/prserv/: __init__.py  client.py  db.py  serv.py
lib/pysh/: builtin.py  pyshlex.py
lib/simplediff/: __init__.py
lib/toaster/: tox.ini
setup-schema/: bitbake-setup.schema.json  layers.schema.json
src_cpp/: CMakeLists.txt
src_cpp/src/: CMakeLists.txt
tools/: bash-completion
trunk/bitbake/: ChangeLog  MANIFEST  TODO  setup.py
trunk/bitbake-data/: AUTHORS  ChangeLog  Makefile.am  README  TODO  acinclude.m4  bitbake-data.pc.in  configure.ac
trunk/bitbake-data/config/: autogen.sh  version.m4
trunk/bitbake-data/doc/: Makefile.am  REQUIREMENTS  test_scoped_lookups.sql
trunk/bitbake-data/doc/doxygen/: Makefile.am  doxygen.cfg
trunk/bitbake-data/include/: bitbake-data.h
trunk/bitbake-data/include/bitbake-data/: common.h  private.h
trunk/bitbake-data/m4/internal/: doxygen.m4
trunk/bitbake-data/src/: Makefile.am  backend-sqlite3.c
trunk/bitbake-data/tests/: Makefile.am  check_bitbake_data.c
trunk/bitbake-ng/: ChangeLog  Makefile.am  acinclude.m4  configure.ac
trunk/bitbake-ng/config/: version.m4
trunk/bitbake-ng/doc/: Makefile.am  doxygen.cfg
trunk/bitbake-ng/doc/design_spec/: Makefile.am  design_spec.xml
trunk/bitbake-ng/doc/ramblings/: bbtree.txt  bitbakeng-metadata.txt  bitbakeng-parser-frontend.txt
trunk/bitbake-ng/include/: Makefile.am  bitbake.h
trunk/bitbake-ng/include/bitbake/: common.h  data-private.h  data.h  recipe-modules.h  recipe.h
trunk/bitbake-ng/m4/internal/: binreloc.m4  visibility.m4
trunk/bitbake-ng/src/: Makefile.am  binreloc.c  binreloc.h  data.c
trunk/bitbake-ng/tests/: Makefile.am  check_bitbake_data.c
(+371 files in other folders)
